PROD-1164 - Fixed uploader spacing and alignment

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
@@ -604,8 +604,8 @@
 	.dz-default.dz-message {
 		display: flex;
 		min-height: 1px;
-		max-width: 120px;
-		height: 120px;
+		max-width: 139px;
+		height: 139px;
 		font-size: 12px;
 		text-align: center;
 		line-height: 1.3;
@@ -628,7 +628,7 @@
 	}
 
 	.dz-image img {
-		width: 130px;
+		width: 139px;
 	}
 
 	.dz-progress-ring-wrap {
