--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -1459,8 +1459,8 @@ div.dropzone.dz-started {
 
 	.dz-default.dz-message {
 		flex-basis: 100%;
-		max-width: 130px !important;
-		min-height: 130px !important;
+		max-width: 139px !important;
+		min-height: 139px !important;
 		margin: 0 4px 10px;
 		padding: 0 5px;
 	}
@@ -1652,7 +1652,7 @@ div.dropzone.dz-started {
 	}
 
 	.dz-preview.dz-file-preview {
-		width: 235px;
+		width: 240px;
 		min-height: 165px;
 
 		.dz-details {
@@ -1688,8 +1688,8 @@ div.dropzone.dz-started {
 	}
 
 	&.dz-started .dz-default.dz-message {
-		max-width: 235px !important;
-		width: 235px;
+		max-width: 240px !important;
+		width: 240px;
 		min-height: 165px !important;
 	}
 
