--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -16687,8 +16687,8 @@ img.emojioneemoji {
   border: 1px solid #e7e9eb;
   text-align: center;
   height: 100%;
-  min-height: 130px;
-  width: 130px;
+  min-height: 140px;
+  width: 140px;
   flex-flow: column;
   align-items: center;
   justify-content: center;
@@ -17043,7 +17043,7 @@ img.emojioneemoji {
 }
 
 div.dropzone .dz-preview {
-  min-width: 130px;
+  min-width: 139px;
 }
 
 div.dropzone .dz-preview .dz-success-mark,
@@ -17057,11 +17057,11 @@ div.dropzone .dz-preview .dz-filename {
 }
 
 .dz-preview .dz-image {
-  height: 130px;
+  height: 139px;
 }
 
 .dz-preview .dz-image img {
-  max-width: 130px;
+  max-width: 139px;
   object-fit: cover;
 }
 
@@ -21723,8 +21723,8 @@ div.dropzone.dz-started {
 
 div.dropzone.dz-started .dz-default.dz-message {
   flex-basis: 100%;
-  max-width: 130px !important;
-  min-height: 130px !important;
+  max-width: 139px !important;
+  min-height: 139px !important;
   margin: 0 4px 10px;
   padding: 0 5px;
 }
@@ -21903,7 +21903,7 @@ div.dropzone.dz-started .dz-default.dz-message {
 }
 
 .dropzone.video-dropzone .dz-preview.dz-file-preview {
-  width: 235px;
+  width: 240px;
   min-height: 165px;
 }
 
@@ -21937,8 +21937,8 @@ div.dropzone.dz-started .dz-default.dz-message {
 }
 
 .dropzone.video-dropzone.dz-started .dz-default.dz-message {
-  max-width: 235px !important;
-  width: 235px;
+  max-width: 240px !important;
+  width: 240px;
   min-height: 165px !important;
 }
 
@@ -22578,8 +22578,8 @@ body > .open-popup.video-error-popup {
 .dropzone.dz-started .dz-default.dz-message {
   display: flex;
   min-height: 1px;
-  max-width: 120px;
-  height: 120px;
+  max-width: 139px;
+  height: 139px;
   font-size: 12px;
   text-align: center;
   line-height: 1.3;
@@ -22599,7 +22599,7 @@ body > .open-popup.video-error-popup {
 }
 
 .dropzone .dz-preview .dz-image img {
-  width: 130px;
+  width: 139px;
 }
 
 .dropzone .dz-preview .dz-progress-ring-wrap {
